--- a/Source/.vscode/settings.json
+++ b/Source/.vscode/settings.json
@@ -45,5 +45,6 @@
         "streambuf": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp"
-    }
+    },
+    "workbench.editor.showTabs": false
 }
